<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_variant">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_arrow"
        app:title="@string/settings" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar">

        <TextView
            android:id="@+id/sort_settings_text"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/sort_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke_width"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sort_settings_text" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view">

            <RadioButton
                android:id="@+id/alphabet_asc_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:buttonTint="@color/radio_btn_selector"
                android:text="@string/alphabet_ascending_order" />

            <RadioButton
                android:id="@+id/alphabet_desc_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:buttonTint="@color/radio_btn_selector"
                android:text="@string/alphabet_descending_order" />

            <RadioButton
                android:id="@+id/rate_asc_order"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:buttonTint="@color/radio_btn_selector"
                android:text="@string/rate_ascending_order" />

            <RadioButton
                android:id="@+id/rate_desc_order"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:buttonTint="@color/radio_btn_selector"
                android:text="@string/rate_descending_order" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>